[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
